# hmk3

./: CMakeLists.txt  README.md
assets/models/robot/Textures/Wood_Material/: TexturesCom_Wood_Ebonized_512_normal.tif
shaders/: object.frag  object.vert
src/: camera.h  main.cpp  mesh.h  model.h  shader.h
